# piggyTrans

./: LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
.github/workflows/: release.yml
scripts/: prepare-icon.py  reset-macos.sh
src/: App.tsx  OverlayApp.tsx  SettingsApp.tsx  main.tsx  overlayWindow.ts  styles.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  macos_overlay.rs  main.rs  selection.rs  settings.rs  translate.rs
