[package]
name = "piggytrans"
version = "0.1.0"
description = "小猪翻译 PiggyTrans — 轻量划词翻译"
authors = ["PiggyTrans"]
edition = "2021"

[lib]
name = "piggytrans_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
md-5 = "0.10"
thiserror = "1"
enigo = "0.2.1"
arboard = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = { version = "0.24", features = ["elcapitan"] }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSRunningApplication", "NSPasteboard", "NSWorkspace", "NSColor"] }
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString"] }
